longhorn/templates/authentik-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ingress-auth
spec:
  rules:
      - path: /outpost.goauthentik.io
        pathType: Prefix
        backend:
          service:
            name: ak-outpost-authentik-embedded-outpost
            port: 
              number: 9000


---

kind: Service
apiVersion: v1
metadata:
  name: ak-outpost-authentik-embedded-outpost
spec:
  type: ExternalName
  externalName: ak-outpost-authentik-embedded-outpost.authentik.svc.cluster.local
